--- a/css/amenities.css
+++ b/css/amenities.css
@@ -25,6 +25,7 @@
 }
 
 .row {
+    height: 30%;
     margin: 1rem auto;
     display: flex;
     justify-content: start;
@@ -56,7 +57,7 @@
     margin: 0 20px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     width: 120px;
-    height: 120px;
+    height: 90%;
     text-align: center;
     border: 1px solid #ccc;
     border-radius: 10px;
